--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p id="ex1">background-color: orange</p>
     <p id="ex2">background-color: #d70e76</p>
     <p id="ex3">background-color: rgb(0,120,240)</p>
+    <p id="ex4">background-color: rgba(0,120,240,0.5)</p>
+
+    <p id="ex5">Un paragraphe avec un <span>span</span></p>
   </body>
 </html>
